--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -1,71 +1,91 @@
-# -- Theme Options --
-# These options control how the theme functions and allow you to
-# customise the display of your website.
-#
-# Refer to the theme docs for more details about each of these parameters.
-# https://jpanther.github.io/congo/docs/configuration/#theme-parameters
+# The theme colour scheme to use
+colorScheme = "congo"
+# The default theme appearance, either light or dark
+defaultAppearance = "light"
+# Whether the theme appearance automatically switches based upon the visitor’s operating system preference
+autoSwitchAppearance= true
 
-colorScheme = "Avocado"
-defaultAppearance = "dark" # valid options: light or dark
-autoSwitchAppearance = true
-
-enableSearch = true
-enableCodeCopy = true
+# Whether or not to show the appearance switcher in the site footer
+showAppearanceSwitcher = false
 
 
-mainSections = ["section1", "section2"]
-# robots = ""
+# Whether site search is enabled
+enableSearch= true
+
+# Whether copy-to-clipboard buttons are enabled for <code> blocks
+enableCodeCopy= true
+
+# The sections that should be displayed in the recent articles list
+mainSections = ["blog"]
+
+# String that indicates how robots should handle your site
+robots = "all"
+
+# When set to true the scroll to top arrow is displayed
+showScrollToTop = false
 
 [header]
-  layout = "hamburger" # valid options: basic, hamburger, custom
+layout = "hamburger" # valid options: basic, hamburger, custom
 
 [footer]
-  showCopyright = true
-  showThemeAttribution = false
-  showAppearanceSwitcher = false
-  showScrollToTop = true
+showCopyright = true
+showThemeAttribution = false
+showAppearanceSwitcher = false
+showScrollToTop = true
 
 [homepage]
-  layout = "profile" # valid options: page, profile, custom
-  showRecent = false
+layout = "profile"# valid options: page, profile, custom
+# Whether or not to display the recent articles list on the homepage
+showRecent= true
+
 
 [article]
-  showDate = true
-  showDateUpdated = false
-  showAuthor = true
-  showBreadcrumbs = false
-  showDraftLabel = true
-  showEdit = false
-  # editURL = "https://github.com/username/repo/"
-  editAppendPath = true
-  showHeadingAnchors = true
-  showPagination = true
-  invertPagination = false
-  showReadingTime = true
-  showTableOfContents = true
-  showTaxonomies = false
-  showWordCount = false
-  showComments = false
-  sharingLinks = ["facebook", "twitter", "pinterest", "reddit", "linkedin", "email"]
+showDate = true # Whether or not article dates are displayed
+showDateUpdated = false# Whether or not the dates articles were updated are displayed
+showAuthor = true# Whether or not the author box is displayed in the article footer
+showBreadcrumbs = true# Whether or not breadcrumbs are displayed in the article header
+showDraftLabel = true# Whether or not the draft indicator is shown next to articles when site is built with --buildDrafts
+showEdit = true# Whether or not the link to edit the article content should be displayed
+editURL = "https://github.com/jpanther/congo/tree/dev/exampleSite/content/"# When article.showEdit is active, the URL for the edit link
+editAppendPath = true# When article.showEdit is active, whether or not the path to the current article should be appended to the URL set at
+# article.editURL
+showHeadingAnchors = true# Whether or not heading anchor links are displayed alongside headings within articles
+showPagination = true# Whether or not the next/previous article links are displayed in the article footer
+invertPagination = false# Whether or not to flip the direction of the next/previous article links
+showReadingTime = true# Whether or not article reading times are displayed
+showTableOfContents = true# Whether or not the table of contents is displayed on articles
+showTaxonomies = false# Whether or not the taxonomies related to this article are displayed
+showWordCount = false# Whether or not article word counts are displayed
+showComments = false
+sharingLinks = ["twitter",  "reddit", "linkedin", "email"]# Which sharing links to display at the end of each article
+
 
 [list]
-  showBreadcrumbs = false
-  showSummary = false
-  showTableOfContents = false
-  groupByYear = true
+# Whether or not breadcrumbs are displayed in the header on list pages
+showBreadcrumbs = true
+# Whether or not article summaries are displayed on list pages
+showSummary = false
+
+showTableOfContents = true
+# Whether or not articles are grouped by year on list pages
+groupByYear = false
 
 [sitemap]
-  excludedKinds = ["taxonomy", "term"]
+# Kinds of content that should be excluded from the generated /sitemap.xml file
+excludedKinds = ["taxonomy", "term"]
 
 [taxonomy]
-  showTermCount = true
+# Whether or not the number of articles within a taxonomy term is displayed on the taxonomy listing
+showTermCount = true
 
 [fathomAnalytics]
-  # site = "ABC12345"
-  # domain = "llama.yoursite.com"
+# site = "ABC12345"
+# domain = "llama.yoursite.com"
 
 [verification]
-  # google = ""
-  # bing = ""
-  # pinterest = ""
-  # yandex = ""
+# google = ""
+# bing = ""
+# pinterest = ""
+# yandex = ""
+
+
