--- a/config/_default/menus.en.toml
+++ b/config/_default/menus.en.toml
@@ -11,18 +11,18 @@
 # ordered by weight from lowest to highest.
 
 [[main]]
-  name = "Blog"
+  name = "blog"
   pageRef = "posts"
   weight = 10
 
 [[main]]
-  name = "Categories"
-  pageRef = "categories"
+  name = "about me"
+  pageRef = "about"
   weight = 20
 
 [[main]]
-  name = "Tags"
-  pageRef = "tags"
+  name = "project"
+  pageRef = "project"
   weight = 30
 
 
