--- a/themes/congo/exampleSite/config/_default/params.toml
+++ b/themes/congo/exampleSite/config/_default/params.toml
@@ -20,7 +20,7 @@ mainSections = ["samples"]
 
 [footer]
   showCopyright = true
-  showThemeAttribution = true
+  showThemeAttribution = false
   showAppearanceSwitcher = true
   showScrollToTop = true
 
